--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-	"name": "bookreviewry_front",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@types/node": "20.3.0",
-		"@types/react": "18.2.12",
-		"@types/react-dom": "18.2.5",
-		"eslint": "8.42.0",
-		"eslint-config-next": "13.4.5",
-		"next": "^13.4.5",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"typescript": "5.1.3"
-	},
-	"packageManager": "yarn@3.6.0",
-	"devDependencies": {
-		"eslint-config-prettier": "^8.8.0"
-	}
+  "name": "bookreviewry_front",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "clean:unix": "rm -rf node_modules",
+    "clean:windows": "rmdir /q /s node_modules",
+    "clean": "yarn run clean:unix || yarn run clean:windows"
+  },
+  "dependencies": {
+    "@types/node": "20.3.0",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.5",
+    "next": "^13.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "5.1.3"
+  },
+  "packageManager": "yarn@3.6.0",
+  "devDependencies": {
+    "eslint-config-prettier": "^8.8.0"
+  }
 }
