--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "clean:unix": "rm -rf node_modules",
-    "clean:windows": "rmdir /q /s node_modules",
-    "clean": "yarn run clean:unix || yarn run clean:windows"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
     "@types/node": "20.3.0",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -20,10 +22,16 @@
     "next": "^13.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.63.4",
+    "scss": "^0.2.4",
     "typescript": "5.1.3"
   },
   "packageManager": "yarn@3.6.0",
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
