--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fontsource/roboto": "^5.0.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@types/mui-image": "^1.0.1",
     "@types/node": "20.3.0",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "mui-image": "^1.0.7",
     "next": "^13.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
