-google login 수정 -SVG 파일 import 되도록 설정

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "packageManager": "yarn@3.6.0",
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "eslint-config-prettier": "^8.8.0"
   },
   "peerDependencies": {
