--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.0.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@types/google.accounts": "^0.0.7",
     "@types/mui-image": "^1.0.1",
     "@types/node": "20.3.0",
     "@types/react": "18.2.12",
